force-app/main/default/objects/Article_Tracking__c/Article_Tracking__c.object-meta.xml
<CustomObject>
    <description>Which articles are viewed in a given case deflection visit</description>
    <label>Article Tracking</label>
    <nameField>
        <displayFormat>AT-{000000}</displayFormat>
        <label>Article Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>