force-app/main/default/objects/Article_Tracking__c/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to article tracked</description>
    <inlineHelpText>Lookup to article tracked</inlineHelpText>
    <label>Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Article Trackings</relationshipLabel>
    <relationshipName>CD_Article_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>