force-app/main/default/objects/Article_Tracking__c/fields/Article_Link__c.field-meta.xml
<CustomField>
    <fullName>Article_Link__c</fullName>
    <label>Article Link</label>
    <referenceTo>Article_Link__c</referenceTo>
    <relationshipLabel>Article Trackings</relationshipLabel>
    <relationshipName>CD_Article_Trackings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>