force-app/main/default/objects/Article_Tracking__c/fields/Article_Title__c.field-meta.xml
<CustomField>
    <fullName>Article_Title__c</fullName>
    <inlineHelpText>The article that was viewed</inlineHelpText>
    <label>Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>