force-app/main/default/objects/Article_Tracking__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If case was created from article</description>
    <inlineHelpText>If case was created from article</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Article Trackings</relationshipLabel>
    <relationshipName>CD_Article_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>