force-app/main/default/objects/Article_Tracking__c/fields/Knowledge_Article_ID__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_ID__c</fullName>
    <description>The knowledge article ID that was viewed</description>
    <inlineHelpText>The knowledge article ID that was viewed</inlineHelpText>
    <label>Knowledge Article ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>