force-app/main/default/objects/Article_Tracking__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Tells whether the article was closed or the user voted as helpful or not helpful</description>
    <inlineHelpText>Tells whether the article was closed or the user voted as helpful or not helpful</inlineHelpText>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Helpful</fullName>
            </value>
            <value>
                <fullName>Not Helpful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>