force-app/main/default/objects/Article_Tracking__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IF( TEXT(Outcome__c) = &apos;Helpful&apos;, 1, IF( TEXT(Outcome__c) = &apos;Not Helpful&apos;, -1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>