force-app/main/default/objects/Article_Tracking__c/fields/Title_of_Article__c.field-meta.xml
<CustomField>
    <fullName>Title_of_Article__c</fullName>
    <description>Title of article tracked</description>
    <formula>Article__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Title of article tracked</inlineHelpText>
    <label>Title of Article</label>
    <type>Text</type>
</CustomField>