force-app/main/default/objects/Article_Tracking__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <inlineHelpText>The Visit the article was viewed during</inlineHelpText>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Article Trackings</relationshipLabel>
    <relationshipName>CD_Article_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>